Update README with install information